# CMA-ES

./: .gitignore  Containerfile  README.md  pyproject.toml
report/: report.tex
report/tables/: success_by_function.tex  success_by_sigma0.tex  wilcoxon_sig.tex
results/: MANIFEST.txt  ert.csv  seeds.json  wilcoxon.csv
scripts/: reproduce.sh
src/cmaes_ri/: __init__.py  analysis.py  cli.py  engine.py  experiment.py  metrics.py  plots.py  problems.py  runner.py  seeds.py
tests/: test_analysis.py  test_engine.py  test_experiment.py  test_metrics.py  test_plots.py  test_problems.py  test_runner.py  test_seeds.py
