[project]
name = "cmaes-ri"
version = "0.1.0"
description = "Randomized initialization of the evolution path p_sigma in CMA-ES (WAE Task 21)"
requires-python = ">=3.12"
dependencies = [
    "cma==4.4.4",
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=16",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "black>=24"]

[project.scripts]
cmaes-ri = "cmaes_ri.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmaes_ri"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
